fix for slider call multiple times

--- a/css/dc-browser.css
+++ b/css/dc-browser.css
@@ -41,10 +41,10 @@ td.thumb i{
     color:#999;
 }
 
-.row:nth-child(odd){
+/*.row:nth-child(odd){
     background-color: #F2F2F2
 }
-
+*/
 
 #release-details img {
     float:right;
